--- a/myCode/css/style.css
+++ b/myCode/css/style.css
@@ -1,7 +1,45 @@
-body{
-	padding-top: 70px;
+.container {
+  padding: 0 40px;
+  min-height: 10px;
+  background-color: #333;
 }
 
-.container{
-	margin: 0 auto;
+.container:after {
+  content: " ";
+  display: table;
+  clear: both;
+}
+
+.middle {
+  box-sizing: border-box;
+  width: 100%;
+  background-color: #e8e8e8;
+  min-height: 30px;
+  float: left;
+}
+
+.left {
+  width: 35px;
+  margin-left: -100%;
+  background-color: #4acbd6;
+  min-height: 30px;
+  float: left;
+}
+
+.right {
+  width: 35px;
+  margin-left: -35px;
+  background-color: #c11c66;
+  min-height: 30px;
+  float: left;
+}
+
+.contenteditable {
+  width: 300px;
+  height: 70px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  border: 1px solid #333;
+  outline: 0;
+  word-wrap: break-word;
 }
